removed basic auth, because WebConfigureAdapter is deprecated will later on code security probably with SecurityFilterChain
moved domain classes in domain.entities

added spring.config.import in application properties and added to .gitignore

will commit and merge more often